Pascal_To_C_Antlr_Semantic.v2/MathExprParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2015-11-04 20:44:47

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  MathExpr 
{
public partial class MathExprParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"UNKNOWN", 
		"PRINT", 
		"INPUT", 
		"BLOCK", 
		"PROGRAM", 
		"BEGIN", 
		"END", 
		"IF", 
		"ELSE", 
		"WHILE", 
		"FOR", 
		"AND", 
		"OR", 
		"NOT", 
		"FUNC_PARAM", 
		"LET", 
		"INT", 
		"REPEATE", 
		"STRING", 
		"DOUBLE", 
		"FLOAT", 
		"BOOL", 
		"VAR", 
		"IN", 
		"PARAMS", 
		"FUNC_CALL", 
		"ARRAY", 
		"FUNC", 
		"RETURN", 
		"SWITCH", 
		"CASE", 
		"DEFAULT", 
		"TYPE", 
		"CASEPARAM", 
		"VARS", 
		"WS", 
		"SL_COMMENT", 
		"ML_COMMENT", 
		"NUMBER", 
		"STRINGVAL", 
		"BOOLVALUE", 
		"IDENT", 
		"ADD", 
		"SUB", 
		"MUL", 
		"DIV", 
		"ASSIGN", 
		"INCR", 
		"DECR", 
		"ADDAS", 
		"SUBAS", 
		"MULAS", 
		"DIVAS", 
		"GE", 
		"LE", 
		"EQ", 
		"NE", 
		"GT", 
		"LT", 
		"'['", 
		"']'", 
		"','", 
		"':'", 
		"'('", 
		"')'", 
		"';'", 
		"'...'", 
		"'->'"
    };

    public const int PRINT = 5;
    public const int STRINGVAL = 43;
    public const int ADD = 46;
    public const int INPUT = 6;
    public const int ARRAY = 30;
    public const int DIVAS = 56;
    public const int VARS = 38;
    public const int VAR = 26;
    public const int LT = 62;
    public const int REPEATE = 21;
    public const int ELSE = 12;
    public const int IF = 11;
    public const int TYPE = 36;
    public const int BOOLVALUE = 44;
    public const int SUB = 47;
    public const int NUMBER = 42;
    public const int IN = 27;
    public const int MUL = 48;
    public const int BLOCK = 7;
    public const int FOR = 14;
    public const int EQ = 59;
    public const int CASE = 34;
    public const int DECR = 52;
    public const int NOT = 17;
    public const int MULAS = 55;
    public const int FUNC_CALL = 29;
    public const int AND = 15;
    public const int NE = 60;
    public const int T__66 = 66;
    public const int T__67 = 67;
    public const int T__68 = 68;
    public const int END = 10;
    public const int SWITCH = 33;
    public const int T__69 = 69;
    public const int PARAMS = 28;
    public const int T__63 = 63;
    public const int T__64 = 64;
    public const int PROGRAM = 8;
    public const int T__65 = 65;
    public const int ADDAS = 53;
    public const int T__70 = 70;
    public const int T__71 = 71;
    public const int FLOAT = 24;
    public const int CASEPARAM = 37;
    public const int BEGIN = 9;
    public const int ASSIGN = 50;
    public const int INT = 20;
    public const int RETURN = 32;
    public const int DOUBLE = 23;
    public const int WS = 39;
    public const int EOF = -1;
    public const int GE = 57;
    public const int OR = 16;
    public const int FUNC = 31;
    public const int SUBAS = 54;
    public const int GT = 61;
    public const int DIV = 49;
    public const int IDENT = 45;
    public const int BOOL = 25;
    public const int ML_COMMENT = 41;
    public const int INCR = 51;
    public const int SL_COMMENT = 40;
    public const int STRING = 22;
    public const int LE = 58;
    public const int WHILE = 13;
    public const int LET = 19;
    public const int UNKNOWN = 4;
    public const int DEFAULT = 35;
    public const int FUNC_PARAM = 18;

    // delegates
    // delegators



        public MathExprParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MathExprParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[103+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MathExprParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "MathExpr.g"; }
    }


    public class array_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "array"
    // MathExpr.g:87:1: array : IDENT ( '[' add ']' )+ -> ^( ARRAY IDENT ( add )* ) ;
    public MathExprParser.array_return array() // throws RecognitionException [1]
    {   
        MathExprParser.array_return retval = new MathExprParser.array_return();
        retval.Start = input.LT(1);
        int array_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken IDENT1 = null;
        IToken char_literal2 = null;
        IToken char_literal4 = null;
        MathExprParser.add_return add3 = default(MathExprParser.add_return);


        AstNode IDENT1_tree=null;
        AstNode char_literal2_tree=null;
        AstNode char_literal4_tree=null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_63 = new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleTokenStream stream_64 = new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_add = new RewriteRuleSubtreeStream(adaptor,"rule add");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:87:6: ( IDENT ( '[' add ']' )+ -> ^( ARRAY IDENT ( add )* ) )
            // MathExpr.g:87:8: IDENT ( '[' add ']' )+
            {
            	IDENT1=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_array775); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_IDENT.Add(IDENT1);

            	// MathExpr.g:87:14: ( '[' add ']' )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == 63) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // MathExpr.g:87:15: '[' add ']'
            			    {
            			    	char_literal2=(IToken)Match(input,63,FOLLOW_63_in_array778); if (state.failed) return retval; 
            			    	if ( (state.backtracking==0) ) stream_63.Add(char_literal2);

            			    	PushFollow(FOLLOW_add_in_array780);
            			    	add3 = add();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_add.Add(add3.Tree);
            			    	char_literal4=(IToken)Match(input,64,FOLLOW_64_in_array782); if (state.failed) return retval; 
            			    	if ( (state.backtracking==0) ) stream_64.Add(char_literal4);


            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements



            	// AST REWRITE
            	// elements:          IDENT, add
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (AstNode)adaptor.GetNilNode();
            	// 87:29: -> ^( ARRAY IDENT ( add )* )
            	{
            	    // MathExpr.g:87:32: ^( ARRAY IDENT ( add )* )
            	    {
            	    AstNode root_1 = (AstNode)adaptor.GetNilNode();
            	    root_1 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(ARRAY, "ARRAY"), root_1);

            	    adaptor.AddChild(root_1, stream_IDENT.NextNode());
            	    // MathExpr.g:87:46: ( add )*
            	    while ( stream_add.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_add.NextTree());

            	    }
            	    stream_add.Reset();

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, array_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "array"

    public class idar_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "idar"
    // MathExpr.g:89:1: idar : ( array | IDENT );
    public MathExprParser.idar_return idar() // throws RecognitionException [1]
    {   
        MathExprParser.idar_return retval = new MathExprParser.idar_return();
        retval.Start = input.LT(1);
        int idar_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken IDENT6 = null;
        MathExprParser.array_return array5 = default(MathExprParser.array_return);


        AstNode IDENT6_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:89:5: ( array | IDENT )
            int alt2 = 2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0 == IDENT) )
            {
                int LA2_1 = input.LA(2);

                if ( (LA2_1 == EOF || LA2_1 == PRINT || (LA2_1 >= BEGIN && LA2_1 <= OR) || LA2_1 == LET || LA2_1 == REPEATE || LA2_1 == VAR || (LA2_1 >= FUNC && LA2_1 <= DEFAULT) || (LA2_1 >= IDENT && LA2_1 <= DECR) || (LA2_1 >= GE && LA2_1 <= LT) || (LA2_1 >= 64 && LA2_1 <= 66) || (LA2_1 >= 68 && LA2_1 <= 70)) )
                {
                    alt2 = 2;
                }
                else if ( (LA2_1 == 63) )
                {
                    alt2 = 1;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d2s1 =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae_d2s1;
                }
            }
            else 
            {
                if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                NoViableAltException nvae_d2s0 =
                    new NoViableAltException("", 2, 0, input);

                throw nvae_d2s0;
            }
            switch (alt2) 
            {
                case 1 :
                    // MathExpr.g:89:7: array
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_array_in_idar804);
                    	array5 = array();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, array5.Tree);

                    }
                    break;
                case 2 :
                    // MathExpr.g:89:15: IDENT
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	IDENT6=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_idar808); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{IDENT6_tree = (AstNode)adaptor.Create(IDENT6);
                    		adaptor.AddChild(root_0, IDENT6_tree);
                    	}

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, idar_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "idar"

    public class type_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "type"
    // MathExpr.g:113:1: type : ( INT | STRING | DOUBLE | FLOAT | BOOL | ( '[' type ']' ) -> ^( ARRAY type ) );
    public MathExprParser.type_return type() // throws RecognitionException [1]
    {   
        MathExprParser.type_return retval = new MathExprParser.type_return();
        retval.Start = input.LT(1);
        int type_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken INT7 = null;
        IToken STRING8 = null;
        IToken DOUBLE9 = null;
        IToken FLOAT10 = null;
        IToken BOOL11 = null;
        IToken char_literal12 = null;
        IToken char_literal14 = null;
        MathExprParser.type_return type13 = default(MathExprParser.type_return);


        AstNode INT7_tree=null;
        AstNode STRING8_tree=null;
        AstNode DOUBLE9_tree=null;
        AstNode FLOAT10_tree=null;
        AstNode BOOL11_tree=null;
        AstNode char_literal12_tree=null;
        AstNode char_literal14_tree=null;
        RewriteRuleTokenStream stream_63 = new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleTokenStream stream_64 = new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_type = new RewriteRuleSubtreeStream(adaptor,"rule type");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:113:5: ( INT | STRING | DOUBLE | FLOAT | BOOL | ( '[' type ']' ) -> ^( ARRAY type ) )
            int alt3 = 6;
            switch ( input.LA(1) ) 
            {
            case INT:
            	{
                alt3 = 1;
                }
                break;
            case STRING:
            	{
                alt3 = 2;
                }
                break;
            case DOUBLE:
            	{
                alt3 = 3;
                }
                break;
            case FLOAT:
            	{
                alt3 = 4;
                }
                break;
            case BOOL:
            	{
                alt3 = 5;
                }
                break;
            case 63:
            	{
                alt3 = 6;
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d3s0 =
            	        new NoViableAltException("", 3, 0, input);

            	    throw nvae_d3s0;
            }

            switch (alt3) 
            {
                case 1 :
                    // MathExpr.g:113:7: INT
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	INT7=(IToken)Match(input,INT,FOLLOW_INT_in_type990); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{INT7_tree = (AstNode)adaptor.Create(INT7);
                    		adaptor.AddChild(root_0, INT7_tree);
                    	}

                    }
                    break;
                case 2 :
                    // MathExpr.g:113:13: STRING
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	STRING8=(IToken)Match(input,STRING,FOLLOW_STRING_in_type994); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{STRING8_tree = (AstNode)adaptor.Create(STRING8);
                    		adaptor.AddChild(root_0, STRING8_tree);
                    	}

                    }
                    break;
                case 3 :
                    // MathExpr.g:113:22: DOUBLE
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	DOUBLE9=(IToken)Match(input,DOUBLE,FOLLOW_DOUBLE_in_type998); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{DOUBLE9_tree = (AstNode)adaptor.Create(DOUBLE9);
                    		adaptor.AddChild(root_0, DOUBLE9_tree);
                    	}

                    }
                    break;
                case 4 :
                    // MathExpr.g:113:31: FLOAT
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	FLOAT10=(IToken)Match(input,FLOAT,FOLLOW_FLOAT_in_type1002); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{FLOAT10_tree = (AstNode)adaptor.Create(FLOAT10);
                    		adaptor.AddChild(root_0, FLOAT10_tree);
                    	}

                    }
                    break;
                case 5 :
                    // MathExpr.g:113:39: BOOL
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	BOOL11=(IToken)Match(input,BOOL,FOLLOW_BOOL_in_type1006); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{BOOL11_tree = (AstNode)adaptor.Create(BOOL11);
                    		adaptor.AddChild(root_0, BOOL11_tree);
                    	}

                    }
                    break;
                case 6 :
                    // MathExpr.g:113:46: ( '[' type ']' )
                    {
                    	// MathExpr.g:113:46: ( '[' type ']' )
                    	// MathExpr.g:113:47: '[' type ']'
                    	{
                    		char_literal12=(IToken)Match(input,63,FOLLOW_63_in_type1011); if (state.failed) return retval; 
                    		if ( (state.backtracking==0) ) stream_63.Add(char_literal12);

                    		PushFollow(FOLLOW_type_in_type1013);
                    		type13 = type();
                    		state.followingStackPointer--;
                    		if (state.failed) return retval;
                    		if ( (state.backtracking==0) ) stream_type.Add(type13.Tree);
                    		char_literal14=(IToken)Match(input,64,FOLLOW_64_in_type1015); if (state.failed) return retval; 
                    		if ( (state.backtracking==0) ) stream_64.Add(char_literal14);


                    	}



                    	// AST REWRITE
                    	// elements:          type
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (AstNode)adaptor.GetNilNode();
                    	// 113:61: -> ^( ARRAY type )
                    	{
                    	    // MathExpr.g:113:64: ^( ARRAY type )
                    	    {
                    	    AstNode root_1 = (AstNode)adaptor.GetNilNode();
                    	    root_1 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(ARRAY, "ARRAY"), root_1);

                    	    adaptor.AddChild(root_1, stream_type.NextTree());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, type_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "type"

    public class value_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "value"
    // MathExpr.g:115:1: value : ( NUMBER | STRINGVAL | BOOLVALUE );
    public MathExprParser.value_return value() // throws RecognitionException [1]
    {   
        MathExprParser.value_return retval = new MathExprParser.value_return();
        retval.Start = input.LT(1);
        int value_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken set15 = null;

        AstNode set15_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:115:6: ( NUMBER | STRINGVAL | BOOLVALUE )
            // MathExpr.g:
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	set15 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= NUMBER && input.LA(1) <= BOOLVALUE) ) 
            	{
            	    input.Consume();
            	    if ( state.backtracking == 0 ) adaptor.AddChild(root_0, (AstNode)adaptor.Create(set15));
            	    state.errorRecovery = false;state.failed = false;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 4, value_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "value"

    public class returnValue_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "returnValue"
    // MathExpr.g:117:1: returnValue : ( term | value | IDENT );
    public MathExprParser.returnValue_return returnValue() // throws RecognitionException [1]
    {   
        MathExprParser.returnValue_return retval = new MathExprParser.returnValue_return();
        retval.Start = input.LT(1);
        int returnValue_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken IDENT18 = null;
        MathExprParser.term_return term16 = default(MathExprParser.term_return);

        MathExprParser.value_return value17 = default(MathExprParser.value_return);


        AstNode IDENT18_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 5) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:117:12: ( term | value | IDENT )
            int alt4 = 3;
            switch ( input.LA(1) ) 
            {
            case NOT:
            case INCR:
            case DECR:
            case 67:
            	{
                alt4 = 1;
                }
                break;
            case IDENT:
            	{
                int LA4_2 = input.LA(2);

                if ( (synpred10_MathExpr()) )
                {
                    alt4 = 1;
                }
                else if ( (true) )
                {
                    alt4 = 3;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d4s2 =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae_d4s2;
                }
                }
                break;
            case NUMBER:
            case STRINGVAL:
            case BOOLVALUE:
            	{
                int LA4_3 = input.LA(2);

                if ( (synpred10_MathExpr()) )
                {
                    alt4 = 1;
                }
                else if ( (synpred11_MathExpr()) )
                {
                    alt4 = 2;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d4s3 =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae_d4s3;
                }
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d4s0 =
            	        new NoViableAltException("", 4, 0, input);

            	    throw nvae_d4s0;
            }

            switch (alt4) 
            {
                case 1 :
                    // MathExpr.g:117:14: term
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_term_in_returnValue1047);
                    	term16 = term();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term16.Tree);

                    }
                    break;
                case 2 :
                    // MathExpr.g:117:21: value
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_value_in_returnValue1051);
                    	value17 = value();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, value17.Tree);

                    }
                    break;
                case 3 :
                    // MathExpr.g:117:29: IDENT
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	IDENT18=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_returnValue1055); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{IDENT18_tree = (AstNode)adaptor.Create(IDENT18);
                    		adaptor.AddChild(root_0, IDENT18_tree);
                    	}

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 5, returnValue_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "returnValue"

    public class arrayValue_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "arrayValue"
    // MathExpr.g:119:1: arrayValue : ( ( '[' returnValue ( ',' returnValue )* ']' ) | ( '[' arrayValue ( ',' arrayValue )* ']' ) -> ( ^( ARRAY arrayValue ) )* );
    public MathExprParser.arrayValue_return arrayValue() // throws RecognitionException [1]
    {   
        MathExprParser.arrayValue_return retval = new MathExprParser.arrayValue_return();
        retval.Start = input.LT(1);
        int arrayValue_StartIndex = input.Index();
        AstNode root_0 = null;
